CRUD de anuncios e ingestas completo y Swagger
