# app/Http/Controllers/IngestionController.php
@@ -95,21 +95,34 @@ class IngestionController extends Controller
      *
      * El formato de la fecha es YYYY-MM-DD
      * 
-     * @OA\Patch(
-     *     path="/api/getIngestasByGroup",
+     *
+     * @OA\Get(
+     *     path="/api/getIngestasByGroup/{type}/{date}",
      *     tags={"Ingestiones"},
      *     summary="Publicación de un auncio",
      *     security={{"bearerAuth": {}}},
-     *     @OA\RequestBody(
+     *     @OA\Parameter(
+     *         name="type",
+     *         in="path",
+     *         description="Tipo de comida",
      *         required=true,
-     *         @OA\JsonContent(
-     *             @OA\Property(property="type", type="string"), 
-     *             @OA\Property(property="date", type="string")
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="date",
+     *         in="path",
+     *         description="Fecha de la ingesta",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             format="date"
      *         )
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Se ontienen las ingestiones de los niños de un grupo, dependiendo la fecha y tipo de comida."
+     *         description="Se obtienen las ingestiones de los niños de un grupo, dependiendo la fecha y tipo de comida."
      *     ),
      *     @OA\Response(
      *         response="default",
@@ -117,26 +130,22 @@ class IngestionController extends Controller
      *     )
      * )
      */
-    public function getIngestasByGroup(Request $request)
+
+    public function getIngestasByGroup(Request $request, $type, $date)
     {   
         $user = $request->user();
 
         if($user->role_id == 1){
-            try{
-                $request->validate([
-                    'type' => 'required',
-                    'date' => 'required|date_format:Y-m-d'
-                ]);
-    
+            try{    
                 $groupId = $user->group->id;
     
                 $ingestions = DB::table('children')
-                    ->leftJoin('ingestions', function ($join) use ($request){
+                    ->leftJoin('ingestions', function ($join) use ($type, $date){
                         $join->on('children.id', '=', 'ingestions.id_child')
-                            ->join('food', function ($joinFood) use ($request) {
+                            ->join('food', function ($joinFood) use ($type, $date) {
                                 $joinFood->on('ingestions.id_food', '=', 'food.id')
-                                    ->where('food.type', '=', $request->type)
-                                    ->where('food.date', '=', $request->date);
+                                    ->where('food.type', '=', $type)
+                                    ->where('food.date', '=', $date);
                             });
                     })
                     ->selectRaw('COALESCE(ingestions.id, -1) as id_ingestion, children.name as name, children.first_surname, children.second_surname, COALESCE(ingestions.gratification, 0) as gratification')
@@ -215,23 +224,24 @@ class IngestionController extends Controller
         }
     }
 
-    /**
-     * Para poder almacenar un anuncio tiene que existir un profesor que esté a cargo de un grupo.
-     * Se verifica que el grupo exista y que además corresponda al usuario que lo esta publicando;
-     * se da por hecho que el usuario es un profesor, pues los unicos que pueden ser registrados 
-     * en la tabla de grupos, son los profesores.
-     *
-     * El formato de la fecha es YYYY-MM-DD
-     * 
+    /** 
      * @OA\Put(
-     *     path="/api/editIngesta",
+     *     path="/api/editIngesta/{id_ingesta}",
      *     tags={"Ingestiones"},
      *     summary="Publicación de un auncio",
      *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="id_ingesta",
+     *         in="path",
+     *         description="Id de la ingesta",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ), 
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             @OA\Property(property="id_ingestion", type="integer"), 
      *             @OA\Property(property="gratification", type="integer"), 
      *         )
      *     ),
@@ -245,7 +255,7 @@ class IngestionController extends Controller
      *     )
      * )
      */
-    public function editIngesta(Request $request)
+    public function editIngesta(Request $request, $id)
     {
         $user = $request->user();
 
@@ -254,23 +264,17 @@ class IngestionController extends Controller
             try 
             {
                 $request->validate([
-                    'id_ingestion' => [
-                        'required',
-                        Rule::exists(Ingestion::class, 'id')->where(function ($query) use ($request){
-                            $query->where('id', $request->id_ingestion);
-                        })
-                    ],
                     'gratification'=> 'required'
                 ]);
 
-                $ingestion = Ingestion::find($request->id_ingestion);
+                $ingestion = Ingestion::find($id);
 
                 $ingestion->gratification = $request->gratification;
                 $ingestion->save();
 
                 return response()->json([
                     'message' => 'Datos almacenados correctamente',
-                    'new ingestion' => $ingestion
+                    'ingestion_updated' => $ingestion
                 ], 202);
             }
             catch (Exception $ex)
